src/test/deca/context/valid/oracle/type_unary_op_1.deca
{
    int a;
    int b = -a;
    b % a; /* Test that b is an int */
}