src/test/deca/context/invalid/ext/TAB_access3.deca
{
    int a = new int [3][3];
    a[3][3][3];
}